--- a/app/src/main/res/layout/activity_camera.xml
+++ b/app/src/main/res/layout/activity_camera.xml
@@ -8,57 +8,50 @@
         android:id="@+id/camera_preview"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:layout_weight="1"
-        />
-<!--
-    <Button
-        android:id="@+id/button_video"
-        android:text="Capture video"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_toLeftOf="@+id/button_photo"
-        />
-
-    <Button
-        android:id="@+id/button_photo"
-        android:text="Capture photo"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
-        />
--->
-    <ImageView
-        android:id="@+id/button_video"
-        android:layout_width = "30dp"
-        android:layout_height = "30dp"
-        android:layout_alignParentLeft ="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginLeft="40dp"
-        android:layout_marginBottom="80dp"
-        android:src="@drawable/video"
 
         />
 
     <ImageView
         android:id="@+id/button_photo"
-        android:layout_width="28dp"
-        android:layout_height ="28dp"
-        android:layout_alignParentLeft="true"
+        android:layout_width="100dp"
+        android:layout_height ="100dp"
         android:layout_alignParentBottom="true"
-        android:layout_marginLeft="75dp"
-        android:layout_marginBottom="50dp"
-        android:src="@drawable/camera"
+        android:layout_centerHorizontal="true"
+        android:padding = "15dp"
+        android:src="@drawable/check"
         />
+
 
     <ImageView
         android:id="@+id/button_otherCamera"
-        android:layout_width="28dp"
-        android:layout_height="28dp"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentBottom="true"
+        android:padding="15dp"
+        android:src="@drawable/switchcamera"
+        />
+
+    <ImageView
+        android:id="@+id/button_gallery"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
         android:layout_alignParentLeft="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginBottom="50dp"
-        android:src="@drawable/albums"
+        android:padding = "15dp"
+        android:src = "@drawable/albums"
+        />
+
+    <ImageView android:id="@+id/imgView"
+        android:layout_width="fill_parent"
+        android:layout_weight="1"
+        android:layout_height="wrap_content"
+        />
+
+    <ImageView android:id="@+id/imgPicker"
+        android:layout_width="fill_parent"
+        android:layout_weight="1"
+        android:layout_height="wrap_content"
         />
 
 
